[gd_scene load_steps=15 format=3 uid="uid://g7o5wwn1re6a"]

[ext_resource type="Script" path="res://Date.gd" id="1_6w8ij"]
[ext_resource type="Script" path="res://Time.gd" id="2_qqntg"]
[ext_resource type="Script" path="res://DelayTimer.gd" id="3_0ig23"]
[ext_resource type="Script" path="res://TestButton.gd" id="4_mbjm5"]
[ext_resource type="PackedScene" uid="uid://54wjryxrfomf" path="res://forecast_day.tscn" id="4_uw6a0"]
[ext_resource type="Script" path="res://ForecastTimer.gd" id="5_1ordo"]

[sub_resource type="SystemFont" id="SystemFont_i5y02"]

[sub_resource type="LabelSettings" id="LabelSettings_bc13e"]
font = SubResource("SystemFont_i5y02")
font_size = 60

[sub_resource type="SystemFont" id="SystemFont_ncmdv"]

[sub_resource type="LabelSettings" id="LabelSettings_sg3pd"]
font = SubResource("SystemFont_ncmdv")
font_size = 96

[sub_resource type="SystemFont" id="SystemFont_dsuyu"]

[sub_resource type="LabelSettings" id="LabelSettings_jibpm"]
font = SubResource("SystemFont_dsuyu")
font_size = 64

[sub_resource type="SystemFont" id="SystemFont_1r6sm"]

[sub_resource type="LabelSettings" id="LabelSettings_3ioaa"]
font = SubResource("SystemFont_1r6sm")
font_size = 24

[node name="Main" type="Node"]

[node name="TimeDisplay" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="TimeDisplay"]
offset_right = 800.0
offset_bottom = 99.0
color = Color(0.186896, 0.259324, 0.712779, 1)

[node name="Date" type="Label" parent="TimeDisplay"]
offset_left = 22.0
offset_top = 7.0
offset_right = 773.0
offset_bottom = 90.0
size_flags_horizontal = 0
text = "Monday January 1"
label_settings = SubResource("LabelSettings_bc13e")
script = ExtResource("1_6w8ij")

[node name="Time" type="Label" parent="TimeDisplay"]
offset_left = 3.0
offset_top = 76.0
offset_right = 636.0
offset_bottom = 208.0
text = "10:01 AM"
label_settings = SubResource("LabelSettings_sg3pd")
script = ExtResource("2_qqntg")

[node name="Temp" type="Label" parent="TimeDisplay"]
unique_name_in_owner = true
offset_left = 644.0
offset_top = 1.0
offset_right = 738.0
offset_bottom = 89.0
text = "32"
label_settings = SubResource("LabelSettings_jibpm")
horizontal_alignment = 2

[node name="Fahrenheit" type="Label" parent="TimeDisplay/Temp"]
layout_mode = 0
offset_left = 104.0
offset_top = 12.0
offset_right = 144.0
offset_bottom = 46.0
text = "Â°F"
label_settings = SubResource("LabelSettings_3ioaa")

[node name="HUD" type="CanvasLayer" parent="TimeDisplay"]

[node name="TestButton" type="Button" parent="TimeDisplay/HUD"]
offset_left = 324.0
offset_top = 281.0
offset_right = 461.0
offset_bottom = 437.0
text = "
test 
button"
script = ExtResource("4_mbjm5")

[node name="ForecastPeriod0" parent="TimeDisplay" instance=ExtResource("4_uw6a0")]
unique_name_in_owner = true
position = Vector2(0, 99)

[node name="ForecastPeriod1" parent="TimeDisplay" instance=ExtResource("4_uw6a0")]
unique_name_in_owner = true
position = Vector2(0, 174)

[node name="ForecastPeriod2" parent="TimeDisplay" instance=ExtResource("4_uw6a0")]
unique_name_in_owner = true
position = Vector2(0, 238)

[node name="ForecastPeriod3" parent="TimeDisplay" instance=ExtResource("4_uw6a0")]
unique_name_in_owner = true
position = Vector2(-3, 306)

[node name="ForecastPeriod4" parent="TimeDisplay" instance=ExtResource("4_uw6a0")]
unique_name_in_owner = true
position = Vector2(-7, 383)

[node name="TextureRect" type="TextureRect" parent="TimeDisplay"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[node name="Connectors" type="Node" parent="."]

[node name="TempTimer" type="Timer" parent="Connectors"]
wait_time = 600.0
one_shot = true
script = ExtResource("3_0ig23")

[node name="HTTPRequest" type="HTTPRequest" parent="Connectors/TempTimer"]

[node name="ForecastTimer" type="Timer" parent="Connectors"]
wait_time = 600.0
one_shot = true
script = ExtResource("5_1ordo")

[node name="HTTPRequest" type="HTTPRequest" parent="Connectors/ForecastTimer"]

[connection signal="pressed" from="TimeDisplay/HUD/TestButton" to="TimeDisplay/HUD/TestButton" method="_on_pressed"]
[connection signal="timeout" from="Connectors/TempTimer" to="Connectors/TempTimer" method="_on_timeout"]
